--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Vue todo</title>
+  <title>Vue Qiita Client</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <div id="app">
-
+    <p><input type="text" v-model="keyword"></p>
+    <p>{{ message }}</p>
+    <ul>
+      <li v-for="item in items">
+        <a v-bind:href="item.url" target="_blank">{{ item.title }}</a> likes: {{item.likes_count}}
+      </li>
+    </ul>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
